crates/traits/tests/snapshots/snapshots__event_commit_rolled_back.snap
---
source: crates/traits/tests/snapshots.rs
expression: "GroupEvent::CommitRolledBack\n{ group_id: gid(), invalidated_commit_id: mid(), }"
---
{
  "CommitRolledBack": {
    "group_id": [
      170,
      170,
      170,
      170
    ],
    "invalidated_commit_id": [
      187,
      187,
      187,
      187
    ]
  }
}
