crates/traits/tests/snapshots/snapshots__event_group_created.snap
---
source: crates/traits/tests/snapshots.rs
expression: "GroupEvent::GroupCreated { group_id: gid() }"
---
{
  "GroupCreated": {
    "group_id": [
      170,
      170,
      170,
      170
    ]
  }
}
