crates/traits/tests/snapshots/snapshots__event_group_hydration_recovered.snap
---
source: crates/traits/tests/snapshots.rs
expression: "GroupEvent::GroupHydrationRecovered\n{ group_id: gid(), recovered_epoch: EpochId(2), }"
---
{
  "GroupHydrationRecovered": {
    "group_id": [
      170,
      170,
      170,
      170
    ],
    "recovered_epoch": 2
  }
}
